dfir_rs/tests/compile-fail-stable/surface_port_join_forwardref.rs
../compile-fail/surface_port_join_forwardref.rs